Trying to get restore to work after creating a new project from a template. Still gettting No Primary Outputs to restore.

--- a/Screaminlean.Radzen.Blazor.Templates.csproj
+++ b/Screaminlean.Radzen.Blazor.Templates.csproj
@@ -8,6 +8,7 @@
     <Authors>Screaminlean</Authors>
     <Description>A set of RadzenBlazor templates.</Description>
     <PackageTags>dotnet-new;templates;linux;macos;cloud;web;blazor</PackageTags>
+    <PackageOutputPath>./nupkg</PackageOutputPath>
 
     <TargetFramework>net5.0</TargetFramework>
 
